# micromanager2

./: CMakeLists.txt  README.md
UnitTest/: LibraryTest.cpp  SerialManagerTest.cpp  ZaberTest.cpp
UnitTest/Common/: DeviceTypes.h  PropertyTypes.h
cmake/: DeviceAdapter.cmake  InstallMM.cmake  MMCore.cmake  MMDevice.cmake  MicromanagerConfig.cmake.in  UnitTests.cmake  UseMicromanager.cmake.in
micromanager2/: micromanager.sln
micromanager2/.svn/: wc.db
micromanager2/DeviceAdapters/AAAOTF/: AAAOTF.cpp
micromanager2/DeviceAdapters/ABS/: ABSCamera.cpp  ABSCamera.h  AbsImgBuffer.h  CcmFileStd.cpp  TimeSpanPC.h  abscommontools.cpp  abscommontools.h  absdelayloaddll.cpp
micromanager2/DeviceAdapters/AOTF/: AOTF.cpp
micromanager2/DeviceAdapters/ASIFW1000/: ASIFW1000.cpp  ASIFW1000.h  ASIFW1000Hub.h
micromanager2/DeviceAdapters/ASIStage/: ASIStage.cpp  ASIStage.h
micromanager2/DeviceAdapters/ASITiger/: ASIBase.h  ASICRISP.cpp  ASICRISP.h  ASIClocked.cpp  ASIClocked.h  ASIFWheel.cpp  ASIHub.cpp  ASIHub.h  ASILED.cpp  ASILED.h  ASIPLogic.cpp  ASIPeripheralBase.h  ASIPiezo.cpp  ASIPiezo.h  ASIScanner.cpp  ASIScanner.h  ASITiger.cpp  ASITiger.h  ASITiger.vcxproj  ASITiger.vcxproj.filters  ASITigerComm.cpp  ASITigerComm.h  ASIXYStage.cpp  ASIXYStage.h  ASIZStage.cpp  ASIZStage.h
micromanager2/DeviceAdapters/AgilentLaserCombiner/: AgilentLaserCombiner.cpp
micromanager2/DeviceAdapters/Andor/: Andor.cpp  Andor.h  Andor.vcxproj.filters
micromanager2/DeviceAdapters/AndorLaserCombiner/: AndorLaserCombiner.cpp
micromanager2/DeviceAdapters/AndorSDK3/: AndorSDK3.cpp  AndorSDK3.h  AndorSDK3.vcxproj  AndorSDK3.vcxproj.filters  EnumProperty.cpp  ExposureProperty.cpp
micromanager2/DeviceAdapters/AndorShamrock/: AndorShamrock.cpp  AndorShamrock.h  AndorShamrock.vcxproj
micromanager2/DeviceAdapters/Apogee/: Apogee.cpp
micromanager2/DeviceAdapters/Arduino/: Arduino.cpp  Arduino.h
micromanager2/DeviceAdapters/BiostepEagleIce/: BiostepEagleIce.cpp
micromanager2/DeviceAdapters/CARVII/: CARVII.cpp
micromanager2/DeviceAdapters/DTOpenLayer/: DTOpenLayer.cpp  DTOpenLayer.h
micromanager2/DeviceAdapters/FLICamera/: FLICamera.cpp
micromanager2/DeviceAdapters/GenericSLM/: DisplayAdapters.cpp  GenericSLM.vcxproj.filters
micromanager2/DeviceAdapters/GigECamera/: GigECamera.cpp  GigECameraAction.cpp
micromanager2/DeviceAdapters/K8055/: K8055.cpp
micromanager2/DeviceAdapters/K8061/: K8061.cpp
micromanager2/DeviceAdapters/LeicaDMI/: LeicaDMI.cpp  LeicaDMI.h
micromanager2/DeviceAdapters/LumencorCIA/: LECtrl.cpp
micromanager2/DeviceAdapters/MCL_MicroDrive/: HandleListType.h  MCL_MicroDrive.cpp  MCL_MicroDrive.h  MCL_MicroDrive.vcxproj.filters  MCL_MicroDrive_ZStage.h  MicroDriveXYStage.cpp  MicroDriveXYStage.h  MicroDriveZStage.cpp
micromanager2/DeviceAdapters/MCL_NanoDrive/: HandleListType.cpp  MCL_NanoDrive.h  MCL_NanoDrive.vcxproj.filters  MCL_NanoDrive_XYStage.h  MCL_NanoDrive_ZStage.cpp  handle_list_if.h  heap.cpp  heap.h
micromanager2/DeviceAdapters/MP285/: MP285.cpp  MP285ZStage.cpp
micromanager2/DeviceAdapters/MT20/: MT20.cpp
micromanager2/DeviceAdapters/MicroPoint/: MicroPoint.cpp
micromanager2/DeviceAdapters/Mightex_C_Cam/: BUF_USBCCDCamera_SDK_Stdcall.h  Mightex_USBCamera.cpp
micromanager2/DeviceAdapters/NI100X/: NI100X.cpp  NI100X.h
micromanager2/DeviceAdapters/NiMotionStageController/: ZStage.cpp
micromanager2/DeviceAdapters/Nikon/: Nikon.cpp  Nikon.h
micromanager2/DeviceAdapters/NikonTE2000/: NikonTE2000.cpp  NikonTE2000.h  TEHub.cpp  TEHub.h
micromanager2/DeviceAdapters/OVP_ECS2/: OVP_ECS2.cpp
micromanager2/DeviceAdapters/Okolab/: #TEMPLATE#Control.cpp  #TEMPLATE#Control.h  ActiveHmdControl.h  CO2BLControl.h  CO2O2BLControl.h  H101BasicControl.cpp  H301BLControl.h  O2BLControl.h  OCSControl.h  Okolab.h  OkolabDevice.cpp  TestControl.cpp
micromanager2/DeviceAdapters/Omicron/: Omicron.cpp  Omicron.vcxproj.filters
micromanager2/DeviceAdapters/OpenCVgrabber/: OpenCVgrabber.cpp  OpenCVgrabber.vcxproj
micromanager2/DeviceAdapters/Oxxius/: Oxxius.cpp
micromanager2/DeviceAdapters/PCO_Generic/: MicroManager.cpp
micromanager2/DeviceAdapters/PIMotionController/: PiMotionControl.cpp
micromanager2/DeviceAdapters/PI_GCS_2/: PIGCSControllerCom.cpp  PIGCSControllerCom.h  PIGCSControllerDLL.cpp  PIGCSControllerDLL.h  PIXYStage_DLL.h
micromanager2/DeviceAdapters/PVCAM/: NotificationEntry.cpp  NotificationThread.h  PVCAM.vcxproj  PVCAM.vcxproj.filters  PVCAMAdapter.cpp  PVCAMAdapter.h  PVCAMParam.cpp  PVCAMParam.h  PVCAMUniversal.cpp  PollingThread.cpp  PpParam.cpp  PpParam.h  PvCircularBuffer.cpp
micromanager2/DeviceAdapters/ParallelPort/: ParallelPort.cpp  ParallelPort.h
micromanager2/DeviceAdapters/Piezosystem_30DV50/: Piezosystem_30DV50.cpp
micromanager2/DeviceAdapters/Piezosystem_NV120_1/: Piezosystem_NV120_1.cpp  Piezosystem_NV120_1.h
micromanager2/DeviceAdapters/Piezosystem_NV40_1/: Piezosystem_NV40_1.cpp
micromanager2/DeviceAdapters/Piezosystem_NV40_3/: Piezosystem_NV40_3.cpp  Piezosystem_NV40_3.h
micromanager2/DeviceAdapters/Piezosystem_dDrive/: Piezosystem_dDrive.cpp
micromanager2/DeviceAdapters/PrecisExcite/: PrecisExcite.cpp
micromanager2/DeviceAdapters/PrincetonInstruments/: PVCAMUniversal.cpp
micromanager2/DeviceAdapters/Prior/: Prior.cpp  prior.h
micromanager2/DeviceAdapters/QCam/: QCam.vcxproj  QICamera.cpp  QICamera.h
micromanager2/DeviceAdapters/Rapp/: Rapp.cpp  Rapp.h
micromanager2/DeviceAdapters/Sapphire/: Sapphire.cpp
micromanager2/DeviceAdapters/Scientifica/: Scientifica.cpp
micromanager2/MMCore/: ConfigGroup.h  Configuration.h  CoreUtils.h  ErrorCodes.h  MMCore.cpp  MMCore.h  MMCore.vcxproj  MMCore.vcxproj.filters
micromanager2/MMCoreJ_wrap/: MMCoreJ.i
micromanager2/MMDevice/: DeviceUtils.cpp  DeviceUtils.h  MMDevice-SharedRuntime.vcxproj.filters  MMDeviceConstants.h  ModuleInterface.h  Property.cpp  Property.h
micromanager2/autofocus/: Autofocus.java  AutofocusDuo.java  OughtaFocus.java
micromanager2/buildscripts/: MMVersion.java.in
micromanager2/sandbox/: windows_dll_deps.py
(+296 files in other folders)
